fix: Remove redundant code and fix width issue caused by overflow CSS

--- a/apps/web-giddh/src/app/invoice/templates/edit-template/out-tempate/templates/gst-template-a/gst-template-a.component.scss
+++ b/apps/web-giddh/src/app/invoice/templates/edit-template/out-tempate/templates/gst-template-a/gst-template-a.component.scss
@@ -192,7 +192,8 @@ header img {
 }
 
 #default .table-item{
-    overflow-x: auto;
+    overflow-x: scroll;
+    width: 100%;
 }
 
 .text-right {
